; ModuleID = '/home/carl/AnghaBench/linux/sound/drivers/extr_portman2x4.c_snd_portman_card_private_free.c'
source_filename = "/home/carl/AnghaBench/linux/sound/drivers/extr_portman2x4.c_snd_portman_card_private_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_card = type { %struct.portman* }
%struct.portman = type { %struct.pardevice* }
%struct.pardevice = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_card*)* @snd_portman_card_private_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_portman_card_private_free(%struct.snd_card* %0) #0 {
  %2 = alloca %struct.snd_card*, align 8
  %3 = alloca %struct.portman*, align 8
  %4 = alloca %struct.pardevice*, align 8
  store %struct.snd_card* %0, %struct.snd_card** %2, align 8
  %5 = load %struct.snd_card*, %struct.snd_card** %2, align 8
  %6 = getelementptr inbounds %struct.snd_card, %struct.snd_card* %5, i32 0, i32 0
  %7 = load %struct.portman*, %struct.portman** %6, align 8
  store %struct.portman* %7, %struct.portman** %3, align 8
  %8 = load %struct.portman*, %struct.portman** %3, align 8
  %9 = getelementptr inbounds %struct.portman, %struct.portman* %8, i32 0, i32 0
  %10 = load %struct.pardevice*, %struct.pardevice** %9, align 8
  store %struct.pardevice* %10, %struct.pardevice** %4, align 8
  %11 = load %struct.pardevice*, %struct.pardevice** %4, align 8
  %12 = icmp ne %struct.pardevice* %11, null
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load %struct.pardevice*, %struct.pardevice** %4, align 8
  %15 = call i32 @parport_release(%struct.pardevice* %14)
  %16 = load %struct.pardevice*, %struct.pardevice** %4, align 8
  %17 = call i32 @parport_unregister_device(%struct.pardevice* %16)
  br label %18

18:                                               ; preds = %13, %1
  %19 = load %struct.portman*, %struct.portman** %3, align 8
  %20 = call i32 @portman_free(%struct.portman* %19)
  ret void
}

declare dso_local i32 @parport_release(%struct.pardevice*) #1

declare dso_local i32 @parport_unregister_device(%struct.pardevice*) #1

declare dso_local i32 @portman_free(%struct.portman*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
